# pingall

./: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  default.nix  deps.py  flake.nix  pyproject.toml  remotebuild.sh  requirements.txt  result  run  todo.md
.github/workflows/: pull_request.yml
app/: Cargo.toml  Dockerfile  app.py  result
app/src/: main.rs
faas/: alicloud.py  aws.py  azure.py  gcp.py
nix/: aws-lambda-web-adapter.nix  image.nix  json-schema.nix  nocargo.nix  pinger.nix  sources.json
ping-service/: Dockerfile  app.yaml  pyproject.toml
ping-service/ping_thing/: main.py
