[tool.poetry]
name = "ping-thing"
version = "0.1.0"
description = ""
authors = ["Rhys Davies <rhys@memes.nz>"]
readme = "README.md"
packages = [{include = "ping_thing"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
aiohttp = {version = "^3.8.3", extras = ["speedups"]}
asyncstdlib = "^3.10.5"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
